@@ -1,3 +1,5 @@
+Changes with phpMorphy 0.2.5                                     12 Jul 2008
+    *) Fixed bug: with_gramtab option have no effect; thanks to andreypaa
 Changes with phpMorphy 0.2.4                                     26 May 2008
     *) Improve perfomance in bulk mode; thanks to Wicked
     *) Fixed bug in shm storage type, with php5.2.6; thanks to berkut
